# GOCAD_TS-Surface-Reader

./: GOCAD-Reader-example.ipynb  README.md  pyproject.toml  read_GOCAD_ts.py
gocad_reader/: __init__.py  reader.py
tests/: test_reader.py
