[build-system]
requires = ["setuptools>=78.1.1", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gocad-reader"
version = "0.1.0"
description = "Read and inspect GOCAD TS surface files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["gocad_reader*"]
